--- a/sections/product-template-tyrannosaurus-rex.liquid
+++ b/sections/product-template-tyrannosaurus-rex.liquid
@@ -883,7 +883,7 @@
                       <span class="advantage-item-title">Learn about animal diversity throughout history</span>
                     </div>
                   </div>
-                  <div class="advantage-item-img" style="background-image: url({{'dvantage-item-4-diplo.png' | asset_url}});background-position: left;background-repeat: no-repeat;"></div>
+                  <div class="advantage-item-img" style="background-image: url({{'dvantage-item-4-tyrannosaurus.png' | asset_url}});background-position: left;background-repeat: no-repeat;"></div>
                 </div>
               </div>
 
