Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -1378,7 +1378,7 @@
                 </div>
             </div>
         </div>
-        {% include 'img-sprite.svg' %}
+        <div style="display: none;">{% include 'img-sprite.svg' %}</div>
     </footer>
     <div class="popup popup--menu mfp-hide" id="popup-menu">
         <div class="mmenu lazy-bg popup__mmenu">
