Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -179,8 +179,8 @@
                         </div>
                         <div class="btn-video__poster">
                             <picture>
-                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'video-poster.webp' | asset_url }}" type="image/webp" />
-                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'video-poster.png' | asset_url }}" type="image/png" /><img class="lazy" src="{{'placeholder.png' | asset_url }}" data-src="{{'video-poster.png' | asset_url }}" alt="" />
+                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'about-video-poster.webp' | asset_url }}" type="image/webp" />
+                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'about-video-poster.png' | asset_url }}" type="image/png" /><img class="lazy" src="{{'placeholder.png' | asset_url }}" data-src="{{'video-poster.png' | asset_url }}" alt="" />
                             </picture>
                         </div><img class="btn-video__play lazy" src="{{'placeholder.png' | asset_url }}" data-src="{{'play.svg' | asset_url }}" alt="" />
                     </a>
