Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -790,7 +790,7 @@
                                     <li>Look at pieces and find out secrets</li>
                                     <li>Go through quests and mazes</li>
                                 </ul>
-                            </div><a class="button gift__button-buy js-buy" href="#order" role="button"><span class="button__caption">Buy</span></a>
+                            </div><a class="button gift__button-buy" href="#order" role="button"><span class="button__caption">Buy</span></a>
                         </div>
                         <div class="gift__right">
                             <div class="gift__items-wrapper">
