Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -887,7 +887,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="comparision__button-wrapper"><a class="button comparision__button-buy js-buy" href="#order" role="button"><span class="button__caption">Buy</span></a></div>
+                    <div class="comparision__button-wrapper"><a class="button comparision__button-buy" href="#order" role="button"><span class="button__caption">Buy</span></a></div>
                 </div>
             </section>
             <section class="cappadocia page__cappadocia" id="cappadocia">
