Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -1461,7 +1461,7 @@
                         <div class="cart__item-total"><span class="cart__item-total-value">6 990</span> ₽</div>
                     </div>
                     <div class="cart__item hidden" data-product-id="3" data-price="7990"><button class="cart__item-remove" type="button" aria-label="Удалить из корзины"><svg class="svg-icon svg-icon--close">
-                                <use xlink:href="assets/img/sprite.svg#close"></use>
+                                <use xlink:href="#close"></use>
                             </svg></button>
                         <div class="cart__item-image">
                             <picture>
