--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -1429,8 +1429,8 @@
                             </svg></button>
                         <div class="cart__item-image">
                             <picture>
-                                <source srcset="assets/img/placeholder.png" data-srcset="assets/img/products/product-1.webp 1x, assets/img/products/product-1@2x.webp 2x" type="image/webp" />
-                                <source srcset="assets/img/placeholder.png" data-srcset="assets/img/products/product-1.png 1x, assets/img/products/product-1@2x.png 2x" type="image/png" /><img class="lazy" src="assets/img/placeholder.png" data-src="assets/img/products/product-1.png 1x, assets/img/products/product-1@2x.png 2x" width="413" height="268" alt="Часть 1 из 4" />
+                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="assets/img/products/product-1.webp 1x, assets/img/products/product-1@2x.webp 2x" type="image/webp" />
+                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="assets/img/products/product-1.png 1x, assets/img/products/product-1@2x.png 2x" type="image/png" /><img class="lazy" src="{{'placeholder.png' | asset_url }}" data-src="assets/img/products/product-1.png 1x, assets/img/products/product-1@2x.png 2x" width="413" height="268" alt="Часть 1 из 4" />
                             </picture>
                         </div>
                         <div class="cart__item-captions">
@@ -1447,8 +1447,8 @@
                             </svg></button>
                         <div class="cart__item-image">
                             <picture>
-                                <source srcset="assets/img/placeholder.png" data-srcset="assets/img/products/product-2.webp 1x, assets/img/products/product-2@2x.webp 2x" type="image/webp" />
-                                <source srcset="assets/img/placeholder.png" data-srcset="assets/img/products/product-2.png 1x, assets/img/products/product-2@2x.png 2x" type="image/png" /><img class="lazy" src="assets/img/placeholder.png" data-src="assets/img/products/product-2.png 1x, assets/img/products/product-2@2x.png 2x" width="413" height="268" alt="Часть 2, 3 и 4" />
+                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="assets/img/products/product-2.webp 1x, assets/img/products/product-2@2x.webp 2x" type="image/webp" />
+                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="assets/img/products/product-2.png 1x, assets/img/products/product-2@2x.png 2x" type="image/png" /><img class="lazy" src="{{'placeholder.png' | asset_url }}" data-src="assets/img/products/product-2.png 1x, assets/img/products/product-2@2x.png 2x" width="413" height="268" alt="Часть 2, 3 и 4" />
                             </picture>
                         </div>
                         <div class="cart__item-captions">
@@ -1465,8 +1465,8 @@
                             </svg></button>
                         <div class="cart__item-image">
                             <picture>
-                                <source srcset="assets/img/placeholder.png" data-srcset="assets/img/products/product-3.webp 1x, assets/img/products/product-3@2x.webp 2x" type="image/webp" />
-                                <source srcset="assets/img/placeholder.png" data-srcset="assets/img/products/product-3.png 1x, assets/img/products/product-3@2x.png 2x" type="image/png" /><img class="lazy" src="assets/img/placeholder.png" data-src="assets/img/products/product-3.png 1x, assets/img/products/product-3@2x.png 2x" width="413" height="268" alt="Полный набор" />
+                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="assets/img/products/product-3.webp 1x, assets/img/products/product-3@2x.webp 2x" type="image/webp" />
+                                <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="assets/img/products/product-3.png 1x, assets/img/products/product-3@2x.png 2x" type="image/png" /><img class="lazy" src="{{'placeholder.png' | asset_url }}" data-src="assets/img/products/product-3.png 1x, assets/img/products/product-3@2x.png 2x" width="413" height="268" alt="Полный набор" />
                             </picture>
                         </div>
                         <div class="cart__item-captions">
