--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -41,6 +41,7 @@
     a.go-cart__button.cart {border-radius: 0;}
     a.go-cart__button:hover {color:white;}
     a.go-cart__button {text-decoration: none;}
+    @media only screen and (min-width: 1000px) {.header__container {flex-direction: row-reverse;}}
 </style>
 <div class="page__wrapper">
     <header class="header page__header">
@@ -52,7 +53,8 @@
                     <li class="menu__item"><a class="menu__link" href="#team">Unidragon &amp; IC4Design</a></li>
                     <li class="menu__item"><a class="menu__link" href="#answers">FAQ</a></li>
                 </ul>
-            </nav><a class="btn-cart header__btn-cart go-cart__trigger js-go-cart-trigger" href="/cart" aria-label="Cart"><span class="btn-cart__icon"><svg class="svg-icon svg-icon--cart">
+            </nav>
+            <a class="btn-cart header__btn-cart go-cart__trigger js-go-cart-trigger" href="/cart" aria-label="Cart"><span class="btn-cart__icon"><svg class="svg-icon svg-icon--cart">
                         <use xlink:href="#cart"></use>
                     </svg></span><span class="btn-cart__total" id="CartCost" data-discount="{{discount_calc}}">{{ cart_total_price | money }}</span></a>
                     <a class="button header__button-buy button--small" href="#order" role="button"><span class="button__caption">Buy</span></a>
@@ -1212,7 +1214,7 @@
                                                     <use xlink:href="#arrow-faq"></use>
                                                 </svg></button></h3>
                                         <div class="faq__answer">
-                                            <p>Got any question? For more information turn to e-mail: care@unidragon.com or just call:<a href="tel:+74951093075">+7 (495) 109 3075.</a></p>
+                                            <p>Got any question? For more information turn to e-mail: care@unidragon.com.</a></p>
                                         </div>
                                     </li>
                                 </ul>
