Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -41,7 +41,7 @@
     a.go-cart__button.cart {border-radius: 0;}
     a.go-cart__button:hover {color:white;}
     a.go-cart__button {text-decoration: none;}
-    @media only screen and (min-width: 1000px) {.header__container {flex-direction: row-reverse;}}
+    @media only screen and (max-width: 1000px) {.header__container {flex-direction: row-reverse;}}
 </style>
 <div class="page__wrapper">
     <header class="header page__header">
