Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -1166,7 +1166,7 @@
                                                     <use xlink:href="#arrow-faq"></use>
                                                 </svg></button></h3>
                                         <div class="faq__answer">
-                                            <p>Delivery is carried out by SDEK, DPD and Russian Post. Courier delivery cost to some of big cities starts with 350 Rub; delivery to place of purchase also starts with 350 Rub. You will get more information after you place a request. Certainly you always have an opportunity to refuse if you don't like delivery cost. </p>
+                                            <p>Delivery is carried out by USPS, DHL of Fedex. Shipping rates and taxes may vary depending on the delivery address for your order. Delivery cost and taxes appear in your checkout.</p>
                                         </div>
                                     </li>
                                     <li class="faq__item">
