--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -11,29 +11,6 @@
         endcase
     endfor 
 
-    assign cart_total_price = 0
-    for item in cart.items
-      if item.product.type == 'Puzzle'
-        assign puzle_discount = puzle_discount | plus: item.quantity
-      endif
-
-      if customer
-        for tag in customer.tags
-          if tag == 'Subscription membership' 
-            assign member_discount = true
-          endif
-        endfor
-      endif
-      if member_discount == true
-        assign item_line_price = item.line_price | times: 0.8
-        assign discount_calc = 0.8
-      elsif puzle_discount > 2
-        assign item_line_price = item.line_price | times: 0.9
-      else
-        assign item_line_price = item.line_price
-      endif
-      assign cart_total_price = cart_total_price | plus: item_line_price
-    endfor
   -%}
 <style>
     a.btn-cart.header__btn-cart.go-cart__trigger.js-go-cart-trigger {display: inherit!important;}
@@ -56,7 +33,7 @@
             </nav>
             <a class="btn-cart header__btn-cart go-cart__trigger js-go-cart-trigger" href="/cart" aria-label="Cart"><span class="btn-cart__icon"><svg class="svg-icon svg-icon--cart">
                         <use xlink:href="#cart"></use>
-                    </svg></span><span class="btn-cart__total" id="CartCost" data-discount="{{discount_calc}}">{{ cart_total_price | money }}</span></a>
+                    </svg></span><span class="btn-cart__total" id="CartCost" data-discount="{{discount_calc}}">{{ cart.total_price | money }}</span></a>
                     <a class="button header__button-buy button--small" href="#order" role="button"><span class="button__caption">Buy</span></a>
             <a class="btn-menu js-popup header__btn-menu" href="#popup-menu" aria-label="Меню"><span class="btn-menu__icon"><svg class="svg-icon svg-icon--menu">
                         <use xlink:href="#menu"></use>
