--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -2,7 +2,10 @@
 {% comment %}
 Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
 {% endcomment %}
-
+<style>
+  .label-test-old {display:initial;}
+  .label-test-new {display:none;}
+</style>
 {%- assign file_extension = 'jpg' -%}
 
 {%- if swatch == blank -%}
@@ -91,12 +94,14 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
             <div class="sw_content_outer">
               <div class="sw_image_outer">
                   {%- case size_count -%}
+                    {%- when 1 -%}
+                    <span class="sw_badge label-test-new">simple</span>
                     {%- when 2 -%}
-                    <span class="sw_badge">2x bigger</span>
+                    <span class="sw_badge label-test-old">2x bigger</span><span class="sw_badge label-test-new">medium</span>
                     {%- when 3 -%}
-                    <span class="sw_badge">3x bigger</span>
+                    <span class="sw_badge label-test-old">3x bigger</span><span class="sw_badge label-test-new">hard</span>
                     {%- when 4 -%}
-                    <span class="sw_badge">7x bigger</span>
+                    <span class="sw_badge label-test-old">7x bigger</span><span class="sw_badge label-test-new">super hard</span>
                   {%- endcase -%}
               </div>
               <div class="sw_var_price">
