--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -720,7 +720,7 @@
                                             <p class="steps__item-text">Go through mazes and complete additional tasks</p>
                                         </div>
                                     </div>
-                                    <div class="steps__item steps__item--6">
+                                    <div class="steps__itemZ Zsteps__item--6" style="display:none">
                                         <picture>
                                             <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'steps-item-6@desktop.webp' | asset_url }} 1x, {{'steps-item-6@desktop@2x.webp' | asset_url }} 2x" media="(min-width: 1000px)" type="image/webp" />
                                             <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'steps-item-6@desktop.png' | asset_url }} 1x, {{'steps-item-6@desktop@2x.png' | asset_url }} 2x" media="(min-width: 1000px)" type="image/png" />
@@ -922,7 +922,7 @@
                             <div class="cappadocia__label-part">4 part <span>из 4</span></div>
                             <div class="cappadocia__label-title">Eastern square district</div>
                         </div>
-                        <div class="cappadocia__app">
+                        <div class="cappadocia__appZ" style="display:none;">
                             <div class="cappadocia__app-title">Merge into virtual reality world</div>
                             <div class="cappadocia__app-visual">
                                 <picture>
