--- a/sections/collection-animals-template.liquid
+++ b/sections/collection-animals-template.liquid
@@ -50,7 +50,7 @@
   <div data-section-id="{{ section.id }}" data-section-type="collection-template">
     <header class="collection-header">
       {% if section.settings.show_collection_image and collection.image %}
-      <div class="collection-hero hero--medium">
+      <div class="collection-hero">
         {%- if collection.handle contains 'balancing-puzzles'  -%}
           <div class="collection-hero__image ratio-container lazyload js"
                 data-bgset="{% include 'bgset', image: collection.image %}"
@@ -62,8 +62,18 @@
           </noscript>
         {%- else -%}
           {%- if section.settings.enable_video -%}
+          <style>
+              #myVide-mob {display:none;}
+              @media (max-width: 768px) {
+                #myVide-mob {display:inherit}
+                #myVideo {display: none;}
+              }
+          </style>
           <video autoplay muted loop playsinline id="myVideo" style="object-fit: cover;width: 100vw;">
             <source src="{{ section.settings.video_bg }}" type="video/mp4">
+          </video>
+          <video autoplay muted loop playsinline id="myVide-mob" style="object-fit: cover;width: 100vw;">
+            <source src="https://cdn.shopify.com/s/files/1/0291/1322/1168/files/480v3.mp4?v=1637501838" type="video/mp4">
           </video>
           <video autoplay muted loop playsinline id="myVideo-test" style="object-fit: cover;width: 100vw; display: none; max-height: 600px;">
             <source src="https://cdn.shopify.com/s/files/1/0291/1322/1168/files/11111.mp4?v=1635436999" type="video/mp4">
