UN-1076 Experiment with label

--- a/sections/collection-animals-template.liquid
+++ b/sections/collection-animals-template.liquid
@@ -63,6 +63,7 @@
         {%- else -%}
           {%- if section.settings.enable_video -%}
           <style>
+              .collection-hero {max-height: 375px!important;}
               #myVide-mob {display:none;}
               @media (max-width: 768px) {
                 #myVide-mob {display:inherit}
