--- a/sections/collection-nature-template.liquid
+++ b/sections/collection-nature-template.liquid
@@ -63,9 +63,9 @@
             #myVideo {
               right: 0;
               bottom: 0;
-              min-width: 100%;
+              min-width: 100vw;
             }
-            .collection-hero {max-height: 375px!important;}
+            .collection-hero {min-height: 375px!important;}
           </style>
             <iframe id="myVideo" src="https://www.youtube.com/embed/{{ section.settings.external_video.id }}?&autoplay=1&mute=1&controls=0&showinfo=0&autohide=1" frameborder="0" controls="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           {%- else -%}
