Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -389,7 +389,7 @@
             </section>
             <section class="assemble lazy-bg page__assemble" id="assemble">
                 <div class="assemble__container">
-                    <h2 class="title assemble__title">Compile the puzzle. <br>Get through the quest</h2>
+                    <h2 class="title assemble__title" style="font-size: 50px;">Compile the puzzle. <br>Get through the quest</h2>
                     <ul class="assemble__items">
                         <li class="assemble__item assemble__item--1">
                             <div class="assemble__item-icon">
