--- a/sections/product-template-mandala.liquid
+++ b/sections/product-template-mandala.liquid
@@ -699,7 +699,7 @@
                   {% endif %}
                 {% endif %}
 
-              <!-- END PRODUCT SWATCH CODE IF ENABLE -->
+              <div id="ct_pe_disco_holder"></div><!-- END PRODUCT SWATCH CODE IF ENABLE -->
                 {% include 'product-page-features' %}
     
                 <input required type="hidden" id="upsellcheckquantity" name="properties[upsellcheckquantity]">
