--- a/sections/product-template-qbrix-poster.liquid
+++ b/sections/product-template-qbrix-poster.liquid
@@ -856,7 +856,7 @@
             {% endfor %} 
           </div>
           {% endif %}
-          <!-- END PRODUCT SWATCH CODE IF ENABLE -->
+          <div id="ct_pe_disco_holder"></div><!-- END PRODUCT SWATCH CODE IF ENABLE -->
                 {% include 'product-page-features' %}
     
                 <input required type="hidden" id="upsellcheckquantity" name="properties[upsellcheckquantity]">
