Image banner implemintation

--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -5,8 +5,10 @@
     </div>
  
   <style>
-
- 
+      .section--fullwidth-banner {
+        align-items: center;
+        display: flex;
+      }
   </style>
  
  
@@ -28,10 +30,10 @@
         "label": "Default image"
       },
       {
-        "type": "number",
-        "id": "img_height",
-        "label": "Image height in px",
-            "default": 200
+        "type": "text",
+        "id": "img_width",
+        "label": "Banner max-width",
+        "default": "100%"
       }
     ],
     "presets": [
