Image banner implemintation

--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -9,6 +9,9 @@
         align-items: center;
         display: flex;
       }
+      .section--fullwidth-banner img {
+          max-width: {{section.settings.img_width}};
+      }
   </style>
  
  
