--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -10,6 +10,7 @@
         display: flex;
       }
       .section--fullwidth-banner img {
+          margin: 0 auto;
           max-width: {{section.settings.img_width}};
       }
   </style>
