Image banner implemintation

--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -13,6 +13,9 @@
           margin: 0 auto;
           max-width: {{section.settings.img_width}};
       }
+      @media only screen and (max-width:456px) {
+        .section--fullwidth-banner img {max-width: 100%}
+      }
   </style>
  
  
