--- a/sections/collection-animals-template.liquid
+++ b/sections/collection-animals-template.liquid
@@ -252,7 +252,7 @@
   {%endcomment%}
   {% if section.settings.enable_full_banner %}
  
-    <div class="section--fullwidth-banner" id="section--fullwidth-banner" style="max-width: {{section.settings.img_width}}">
+    <div class="section--fullwidth-banner" id="section--fullwidth-banner" style="max-width: {{section.settings.img_width}}; margin-bottom:30px">
       <img src="{{section.settings.img | img_url: 'master' }}" alt="" title="">
     </div>
  
