Image banner implemintation

--- a/sections/collection-nature-template.liquid
+++ b/sections/collection-nature-template.liquid
@@ -684,6 +684,27 @@
          },
          {
             "type":"header",
+            "content":"Full-width Banner"
+         },
+         {
+          "type": "checkbox",
+          "id": "enable_full_banner",
+          "label": "Enable Fullwidth Banner",
+          "default": false
+        },
+        {
+          "type": "image_picker",
+          "id": "img",
+          "label": "Default image"
+        },
+        {
+          "type": "text",
+          "id": "img_width",
+          "label": "Banner max-width",
+          "default": "100%"
+        },
+         {
+            "type":"header",
             "content":"Video background setting"
          },
          {
