Image banner implemintation

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -832,9 +832,9 @@
           </div>
 
             <div class="reputon-trustpilot-reviews-widget" id="a83b7e60-bc57-11eb-a355-a9194acb8438" style="display: flex; justify-content: center;"></div>
-            {%- unless product.title contains "balancing" -%}
+            {% if section.settings.pdp_enable %}
               {% render 'pdp__discount' %}
-            {%- endunless -%}
+            {%- endif -%}
 
             <div class="text-center storyblock medium-up--hide"><span class="heading">Inspiring Stories</span></div>
             <div class="storyblock-text-left">
@@ -1442,6 +1442,12 @@
         {
           "type":"header",
           "content":"Discount Image Banner"
+        },
+        {
+          "type": "checkbox",
+          "id": "pdp_enable",
+          "label": "Enable PDP banner",
+          "default": false
         },
         {
           "type": "checkbox",
