--- a/sections/product-template-mandala.liquid
+++ b/sections/product-template-mandala.liquid
@@ -817,9 +817,9 @@
               </div>
               
               <div class="reputon-trustpilot-reviews-widget" id="a83b7e60-bc57-11eb-a355-a9194acb8438" style="display: flex; justify-content: center;"></div>
-              {%- unless product.title contains "balancing" -%}
+              {% if section.settings.pdp_enable %}
                 {% render 'pdp__discount' %}
-              {%- endunless -%}
+              {%- endif -%}
     {%comment%}
               <div class="text-center storyblock medium-up--hide"><span class="heading">Inspiring Stories</span></div>
               <div class="storyblock-text-left">
@@ -1409,6 +1409,27 @@
               "type": "image_picker",
               "id": "enable_trust_badges_image",
               "label": "Payment icons"
+            },
+            {
+              "type":"header",
+              "content":"Discount Image Banner"
+            },
+            {
+              "type": "checkbox",
+              "id": "pdp_enable",
+              "label": "Enable PDP banner",
+              "default": false
+            },
+            {
+              "type": "checkbox",
+              "id": "pdp_enable_banner",
+              "label": "Enable image banner",
+              "default": false
+            },
+            {
+              "type":"image_picker",
+              "id":"pdp_image_banner",
+              "label":"Banner Image"
             },
             {
               "type":"header",
