--- a/sections/cart-template.liquid
+++ b/sections/cart-template.liquid
@@ -198,7 +198,7 @@
           {%- liquid
             for item in cart.items
               if item.product.type == 'Puzzle'
-                assign puzle_discount = puzle_discount | plus: item.quantity
+                assign puzle_discount = puzle_discount | plus: item.quantity 
               endif
             endfor
           -%}
@@ -221,7 +221,7 @@
                   assign total_saving = saving | plus: total_saving
                   assign total_saving_was = was | plus: total_saving_was
                 endif
-            elsif puzle_discount > 2 and item.product.type == 'Puzzle'
+            elsif settings.display_3pazl_discount and puzle_discount > 2 and item.product.type == 'Puzzle'
               assign item_price = item.price
               assign item_line_price = item.line_price | times: 0.9
               assign item_original_line_price = item.original_line_price
