Display 10% on cart page discount settings

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -570,7 +570,7 @@
                     if member_discount == true
                       assign item_line_price = item.line_price | times: 0.8
                       assign discount_calc = 0.8
-                    elsif puzle_discount > 2
+                    elsif settings.display_3pazl_discount puzle_discount > 2
                       assign item_line_price = item.line_price | times: 0.9
                     else
                       assign item_line_price = item.line_price
