--- a/sections/cart-template-lite.liquid
+++ b/sections/cart-template-lite.liquid
@@ -226,7 +226,7 @@
                   assign total_saving = saving | plus: total_saving
                   assign total_saving_was = was | plus: total_saving_was
                 endif
-            elsif puzle_discount > 2 and item.product.type == 'Puzzle'
+            elsif settings.display_3pazl_discount puzle_discount > 2 and item.product.type == 'Puzzle'
               assign item_price = item.price | times: 0.9
               assign item_line_price = item.line_price | times: 0.9
               assign item_original_line_price = item.original_line_price | times: 0.9
