UN-1123 New badge

--- a/snippets/size-block.liquid
+++ b/snippets/size-block.liquid
@@ -1,7 +1,6 @@
 {%comment%}Size Block{%endcomment%}
 <style>
-  .label-test-old {display:initial;}
-  .label-test-new {display:none;display: flex;flex-direction: column;justify-content: center;}
+  .label-test-new {display: flex;flex-direction: column;justify-content: center;}
 </style>
 
 <div class="page-width rich-text size-block">
@@ -35,7 +34,6 @@
       <div class="grid__item large-up--one-quarter medium-down--one-whole">
           <div class="size one-whole">
             <div class="size-label">M</div>
-            <div class="bigger-text label-test-old">2x {{ 'custome_block.sizechart.bigger' | t }}</div>
             <div class="bigger-text label-test-new">medium</div>
           </div>
           <div class="one-whole">
@@ -55,7 +53,6 @@
       <div class="grid__item large-up--one-quarter medium-down--one-whole">
         <div class="size one-whole">
           <div class="size-label">{{ 'custome_block.sizechart.king_size' | t }}</div>
-          <div class="bigger-text label-test-old">3x {{ 'custome_block.sizechart.bigger' | t }}</div>
           <div class="bigger-text label-test-new">hard</div>
         </div>
         <div class="one-whole">
@@ -75,7 +72,6 @@
       <div class="grid__item large-up--one-quarter medium-down--one-whole">
         <div class="size one-whole">
           <div class="size-label">{{ 'custome_block.sizechart.royal_size' | t }}</div>
-          <div class="bigger-text label-test-old">7x {{ 'custome_block.sizechart.bigger' | t }}</div>
           <div class="bigger-text label-test-new">super hard</div>
         </div>
         <div class="one-whole">
