--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -107,7 +107,7 @@
       <source src="{{ section.settings.video_bg }}" type="video/mp4">
     </video>
     <video autoplay muted loop playsinline id="myVide-mob" style="object-fit: cover;width: 100vw;">
-      <source src="https://cdn.shopify.com/s/files/1/0291/1322/1168/files/480v3.mp4?v=1637501838" type="video/mp4">
+      <source src="{{ section.settings.mob_video_bg }}" type="video/mp4">
     </video>
     {%- elsif section.settings.enable_external_video -%}
     <style>
@@ -161,6 +161,12 @@
         "type": "text",
         "id": "video_bg",
         "label": "Video"
+      },
+      {
+        "type": "text",
+        "id": "mob_video_bg",
+        "label": "Video Mob version",
+        "default": "//cdn.shopify.com/s/files/1/0291/1322/1168/files/480v3.mp4?v=1637501838"
       },
       {
         "type": "checkbox",
